--- a/api-server/package.json
+++ b/api-server/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.556.0",
+    "@prisma/client": "^5.13.0",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "random-word-slugs": "^0.1.7",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "zod": "^3.23.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.13.0"
   }
 }
